testdata/baselines/reference/submodule/compiler/commonJsExportTypeDeclarationError.errors.txt
test.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
types1.ts(3,1): error TS1005: '=' expected.
types2.ts(3,1): error TS1110: Type expected.
types3.ts(2,13): error TS2456: Type alias 'test' circularly references itself.


==== test.js (1 errors) ====
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
       message: ""
    }
    
==== types1.ts (1 errors) ====
    import test from "./test";
    export type test
    
    
!!! error TS1005: '=' expected.
==== types2.ts (1 errors) ====
    import test from "./test";
    export type test = 
    
    
!!! error TS1110: Type expected.
==== types3.ts (1 errors) ====
    import test from "./test";
    export type test = test;
                ~~~~
!!! error TS2456: Type alias 'test' circularly references itself.
    